target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 42927a2421dd9be200df5586bde8078f68e7ae36
    app.quarkus.io/build-timestamp: 2023-07-27 - 15:57:19 +0000
  labels:
    app.kubernetes.io/name: code-with-quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: code-with-quarkus
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: code-with-quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 42927a2421dd9be200df5586bde8078f68e7ae36
    app.quarkus.io/build-timestamp: 2023-07-27 - 15:57:19 +0000
  labels:
    app.kubernetes.io/name: code-with-quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: code-with-quarkus
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: code-with-quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/commit-id: 42927a2421dd9be200df5586bde8078f68e7ae36
        app.quarkus.io/build-timestamp: 2023-07-27 - 15:57:19 +0000
      labels:
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: code-with-quarkus
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: saul/code-with-quarkus:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: code-with-quarkus
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - code-with-quarkus
        from:
          kind: ImageStreamTag
          name: code-with-quarkus:1.0.0-SNAPSHOT
      type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 42927a2421dd9be200df5586bde8078f68e7ae36
    app.quarkus.io/build-timestamp: 2023-07-27 - 15:57:19 +0000
  labels:
    app.kubernetes.io/name: code-with-quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: code-with-quarkus
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: code-with-quarkus
